[package]
name = "Capstone"
version = "0.1.0"
authors = ["asheh <as2607@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
packet = "0.1.4"
pnet = "0.28.0"
tokio = {version = "1.7",features = ["sync"]}