[package]
name = "Capstone"
version = "0.1.0"
authors = ["asheh <as2607@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
packet = "0.1.4"
pnet_packet = "0.28.0"
pnet_base = "0.28.0"
tokio = {version = "1.7",features = ["sync","rt","macros","rt-multi-thread"]}
async-trait = "0.1.50"
tokio-stream = "0.1.6"